--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,3 +1,6 @@
+project:
+  type: website
+
 format:
   html:
     toc: false
@@ -16,7 +19,7 @@ knitr:
     fig.show: "hold"
     fig.asp: 0.618
     fig.retna: 3
-    out.width: 70%
+    out.width: 80%
     echo: false
 
 execute: 
