--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,11 @@ jobs:
     - name: Set up R
       uses: r-lib/actions/setup-r@v2
       
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libfontconfig1-dev libfreetype6-dev libpng-dev libtiff5-dev libjpeg-dev
+      
     - name: Install quarto
       uses: quarto-dev/quarto-actions/setup@v2
       
